<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>slz_intellisystem</name>
  <version>0.1.0</version>
  <description>UAV intelligent information system for landing on an unprepared site</description>
  <maintainer email="felixfat9@gmail.com">flex</maintainer>
  <license>Apache License 2.0</license>

  <!-->program's dependecies<-->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>slz_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>

  <!-->test's dependecies<-->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
